tests/codegen/fail/unsupported_cleanup_capturing_closure_value_build.stderr
error: tests/codegen/fail/unsupported_cleanup_capturing_closure_value_build.ql:7:24: LLVM IR backend foundation currently only supports a narrow non-`move` capturing-closure subset: immutable same-function scalar captures through direct/local-alias calls plus the current direct cleanup/guard-call paths
      let capture_base = () => base
                        ^^^^^^^^
